[tool.poetry]
name = "hello-pyteal-312"
version = "0.1.0"
description = ""
authors = ["Altynbek Orumbayev <altynbek.orumbayev@makerx.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyteal = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
